parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> Simple
Rule 2     script -> RigidBody
Rule 3     script -> CharacterController
Rule 4     Simple -> SIMPLE SpeedId Movement
Rule 5     RigidBody -> RIGIDBODY SpeedId Movement ForceMode Action
Rule 6     CharacterController -> CHARACTERCONTROLLER SpeedId GravityId Movement Action
Rule 7     SpeedId -> Speed EQUALS Float
Rule 8     GravityId -> Gravity EQUALS Float
Rule 9     Movement -> ID EQUALS Direction ID EQUALS Direction ID EQUALS Direction
Rule 10    Direction -> Horizontal
Rule 11    Direction -> NONE
Rule 12    Direction -> Vertical
Rule 13    ForceMode -> Force
Rule 14    ForceMode -> Impulse
Rule 15    ForceMode -> Acceleration
Rule 16    ForceMode -> NONE
Rule 17    Action -> Jump
Rule 18    Action -> Dash
Rule 19    Action -> JetPack
Rule 20    KeyCode -> <empty>
Rule 21    KeyCode -> A
Rule 22    KeyCode -> B
Rule 23    KeyCode -> C
Rule 24    KeyCode -> D
Rule 25    KeyCode -> E
Rule 26    KeyCode -> F
Rule 27    KeyCode -> G
Rule 28    KeyCode -> H
Rule 29    KeyCode -> I
Rule 30    KeyCode -> J
Rule 31    KeyCode -> K
Rule 32    KeyCode -> L
Rule 33    KeyCode -> M
Rule 34    KeyCode -> N
Rule 35    KeyCode -> O
Rule 36    KeyCode -> P
Rule 37    KeyCode -> Q
Rule 38    KeyCode -> R
Rule 39    KeyCode -> S
Rule 40    KeyCode -> T
Rule 41    KeyCode -> U
Rule 42    KeyCode -> V
Rule 43    KeyCode -> W
Rule 44    KeyCode -> X
Rule 45    KeyCode -> Y
Rule 46    KeyCode -> Z
Rule 47    KeyCode -> Backspace
Rule 48    KeyCode -> Tab
Rule 49    KeyCode -> SysReq
Rule 50    KeyCode -> Break
Rule 51    KeyCode -> CapsLock
Rule 52    KeyCode -> ScrollLock
Rule 53    KeyCode -> RightShift
Rule 54    KeyCode -> LeftShift
Rule 55    KeyCode -> RightControl
Rule 56    KeyCode -> LeftControl
Rule 57    KeyCode -> RightAlt
Rule 58    KeyCode -> LeftAlt
Rule 59    KeyCode -> RightCommand
Rule 60    KeyCode -> RightApple
Rule 61    KeyCode -> LeftCommand
Rule 62    KeyCode -> LeftWindows
Rule 63    KeyCode -> RightWindows
Rule 64    KeyCode -> AltGr
Rule 65    KeyCode -> Help
Rule 66    KeyCode -> Print
Rule 67    KeyCode -> Clear
Rule 68    KeyCode -> Return
Rule 69    KeyCode -> Pause
Rule 70    KeyCode -> Escape
Rule 71    KeyCode -> Space
Rule 72    KeyCode -> Exclaim
Rule 73    KeyCode -> DoubleQuote
Rule 74    KeyCode -> Hash
Rule 75    KeyCode -> Dollar
Rule 76    KeyCode -> Ampersand
Rule 77    KeyCode -> Quote
Rule 78    KeyCode -> LeftParen
Rule 79    KeyCode -> RightParen
Rule 80    KeyCode -> Asterisk
Rule 81    KeyCode -> Plus
Rule 82    KeyCode -> Comma
Rule 83    KeyCode -> Minus
Rule 84    KeyCode -> Period
Rule 85    KeyCode -> Slash
Rule 86    KeyCode -> Colon
Rule 87    KeyCode -> Semicolon
Rule 88    KeyCode -> Less
Rule 89    KeyCode -> Equals
Rule 90    KeyCode -> Greater
Rule 91    KeyCode -> Question
Rule 92    KeyCode -> At
Rule 93    KeyCode -> LeftBracket
Rule 94    KeyCode -> Backslash
Rule 95    KeyCode -> RightBracket
Rule 96    KeyCode -> Caret
Rule 97    KeyCode -> Underscore
Rule 98    KeyCode -> BackQuote
Rule 99    Jump -> JUMP EQUALS KeyCode
Rule 100   Jump -> JUMP EQUALS KeyCode Action
Rule 101   Dash -> DASH EQUALS KeyCode
Rule 102   Dash -> DASH EQUALS KeyCode Action
Rule 103   JetPack -> JETPACK EQUALS KeyCode
Rule 104   JetPack -> JETPACK EQUALS KeyCode Action

Terminals, with rules where they appear

A                    : 21
Acceleration         : 15
AltGr                : 64
Ampersand            : 76
Asterisk             : 80
At                   : 92
B                    : 22
BackQuote            : 98
Backslash            : 94
Backspace            : 47
Break                : 50
C                    : 23
CHARACTERCONTROLLER  : 6
CapsLock             : 51
Caret                : 96
Clear                : 67
Colon                : 86
Comma                : 82
D                    : 24
DASH                 : 101 102
Dollar               : 75
DoubleQuote          : 73
E                    : 25
EQUALS               : 7 8 9 9 9 99 100 101 102 103 104
Equals               : 89
Escape               : 70
Exclaim              : 72
F                    : 26
Float                : 7 8
Force                : 13
G                    : 27
Gravity              : 8
Greater              : 90
H                    : 28
Hash                 : 74
Help                 : 65
Horizontal           : 10
I                    : 29
ID                   : 9 9 9
Impulse              : 14
J                    : 30
JETPACK              : 103 104
JUMP                 : 99 100
K                    : 31
L                    : 32
LeftAlt              : 58
LeftBracket          : 93
LeftCommand          : 61
LeftControl          : 56
LeftParen            : 78
LeftShift            : 54
LeftWindows          : 62
Less                 : 88
M                    : 33
Minus                : 83
N                    : 34
NONE                 : 11 16
O                    : 35
P                    : 36
Pause                : 69
Period               : 84
Plus                 : 81
Print                : 66
Q                    : 37
Question             : 91
Quote                : 77
R                    : 38
RIGIDBODY            : 5
Return               : 68
RightAlt             : 57
RightApple           : 60
RightBracket         : 95
RightCommand         : 59
RightControl         : 55
RightParen           : 79
RightShift           : 53
RightWindows         : 63
S                    : 39
SIMPLE               : 4
ScrollLock           : 52
Semicolon            : 87
Slash                : 85
Space                : 71
Speed                : 7
SysReq               : 49
T                    : 40
Tab                  : 48
U                    : 41
Underscore           : 97
V                    : 42
Vertical             : 12
W                    : 43
X                    : 44
Y                    : 45
Z                    : 46
error                : 

Nonterminals, with rules where they appear

Action               : 5 6 100 102 104
CharacterController  : 3
Dash                 : 18
Direction            : 9 9 9
ForceMode            : 5
GravityId            : 6
JetPack              : 19
Jump                 : 17
KeyCode              : 99 100 101 102 103 104
Movement             : 4 5 6
RigidBody            : 2
Simple               : 1
SpeedId              : 4 5 6
script               : 0

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . Simple
    (2) script -> . RigidBody
    (3) script -> . CharacterController
    (4) Simple -> . SIMPLE SpeedId Movement
    (5) RigidBody -> . RIGIDBODY SpeedId Movement ForceMode Action
    (6) CharacterController -> . CHARACTERCONTROLLER SpeedId GravityId Movement Action

    SIMPLE          shift and go to state 5
    RIGIDBODY       shift and go to state 6
    CHARACTERCONTROLLER shift and go to state 7

    script                         shift and go to state 1
    Simple                         shift and go to state 2
    RigidBody                      shift and go to state 3
    CharacterController            shift and go to state 4

state 1

    (0) S' -> script .



state 2

    (1) script -> Simple .

    $end            reduce using rule 1 (script -> Simple .)


state 3

    (2) script -> RigidBody .

    $end            reduce using rule 2 (script -> RigidBody .)


state 4

    (3) script -> CharacterController .

    $end            reduce using rule 3 (script -> CharacterController .)


state 5

    (4) Simple -> SIMPLE . SpeedId Movement
    (7) SpeedId -> . Speed EQUALS Float

    Speed           shift and go to state 9

    SpeedId                        shift and go to state 8

state 6

    (5) RigidBody -> RIGIDBODY . SpeedId Movement ForceMode Action
    (7) SpeedId -> . Speed EQUALS Float

    Speed           shift and go to state 9

    SpeedId                        shift and go to state 10

state 7

    (6) CharacterController -> CHARACTERCONTROLLER . SpeedId GravityId Movement Action
    (7) SpeedId -> . Speed EQUALS Float

    Speed           shift and go to state 9

    SpeedId                        shift and go to state 11

state 8

    (4) Simple -> SIMPLE SpeedId . Movement
    (9) Movement -> . ID EQUALS Direction ID EQUALS Direction ID EQUALS Direction

    ID              shift and go to state 13

    Movement                       shift and go to state 12

state 9

    (7) SpeedId -> Speed . EQUALS Float

    EQUALS          shift and go to state 14


state 10

    (5) RigidBody -> RIGIDBODY SpeedId . Movement ForceMode Action
    (9) Movement -> . ID EQUALS Direction ID EQUALS Direction ID EQUALS Direction

    ID              shift and go to state 13

    Movement                       shift and go to state 15

state 11

    (6) CharacterController -> CHARACTERCONTROLLER SpeedId . GravityId Movement Action
    (8) GravityId -> . Gravity EQUALS Float

    Gravity         shift and go to state 17

    GravityId                      shift and go to state 16

state 12

    (4) Simple -> SIMPLE SpeedId Movement .

    $end            reduce using rule 4 (Simple -> SIMPLE SpeedId Movement .)


state 13

    (9) Movement -> ID . EQUALS Direction ID EQUALS Direction ID EQUALS Direction

    EQUALS          shift and go to state 18


state 14

    (7) SpeedId -> Speed EQUALS . Float

    Float           shift and go to state 19


state 15

    (5) RigidBody -> RIGIDBODY SpeedId Movement . ForceMode Action
    (13) ForceMode -> . Force
    (14) ForceMode -> . Impulse
    (15) ForceMode -> . Acceleration
    (16) ForceMode -> . NONE

    Force           shift and go to state 21
    Impulse         shift and go to state 22
    Acceleration    shift and go to state 23
    NONE            shift and go to state 24

    ForceMode                      shift and go to state 20

state 16

    (6) CharacterController -> CHARACTERCONTROLLER SpeedId GravityId . Movement Action
    (9) Movement -> . ID EQUALS Direction ID EQUALS Direction ID EQUALS Direction

    ID              shift and go to state 13

    Movement                       shift and go to state 25

state 17

    (8) GravityId -> Gravity . EQUALS Float

    EQUALS          shift and go to state 26


state 18

    (9) Movement -> ID EQUALS . Direction ID EQUALS Direction ID EQUALS Direction
    (10) Direction -> . Horizontal
    (11) Direction -> . NONE
    (12) Direction -> . Vertical

    Horizontal      shift and go to state 28
    NONE            shift and go to state 29
    Vertical        shift and go to state 30

    Direction                      shift and go to state 27

state 19

    (7) SpeedId -> Speed EQUALS Float .

    ID              reduce using rule 7 (SpeedId -> Speed EQUALS Float .)
    Gravity         reduce using rule 7 (SpeedId -> Speed EQUALS Float .)


state 20

    (5) RigidBody -> RIGIDBODY SpeedId Movement ForceMode . Action
    (17) Action -> . Jump
    (18) Action -> . Dash
    (19) Action -> . JetPack
    (99) Jump -> . JUMP EQUALS KeyCode
    (100) Jump -> . JUMP EQUALS KeyCode Action
    (101) Dash -> . DASH EQUALS KeyCode
    (102) Dash -> . DASH EQUALS KeyCode Action
    (103) JetPack -> . JETPACK EQUALS KeyCode
    (104) JetPack -> . JETPACK EQUALS KeyCode Action

    JUMP            shift and go to state 35
    DASH            shift and go to state 36
    JETPACK         shift and go to state 37

    Action                         shift and go to state 31
    Jump                           shift and go to state 32
    Dash                           shift and go to state 33
    JetPack                        shift and go to state 34

state 21

    (13) ForceMode -> Force .

    JUMP            reduce using rule 13 (ForceMode -> Force .)
    DASH            reduce using rule 13 (ForceMode -> Force .)
    JETPACK         reduce using rule 13 (ForceMode -> Force .)


state 22

    (14) ForceMode -> Impulse .

    JUMP            reduce using rule 14 (ForceMode -> Impulse .)
    DASH            reduce using rule 14 (ForceMode -> Impulse .)
    JETPACK         reduce using rule 14 (ForceMode -> Impulse .)


state 23

    (15) ForceMode -> Acceleration .

    JUMP            reduce using rule 15 (ForceMode -> Acceleration .)
    DASH            reduce using rule 15 (ForceMode -> Acceleration .)
    JETPACK         reduce using rule 15 (ForceMode -> Acceleration .)


state 24

    (16) ForceMode -> NONE .

    JUMP            reduce using rule 16 (ForceMode -> NONE .)
    DASH            reduce using rule 16 (ForceMode -> NONE .)
    JETPACK         reduce using rule 16 (ForceMode -> NONE .)


state 25

    (6) CharacterController -> CHARACTERCONTROLLER SpeedId GravityId Movement . Action
    (17) Action -> . Jump
    (18) Action -> . Dash
    (19) Action -> . JetPack
    (99) Jump -> . JUMP EQUALS KeyCode
    (100) Jump -> . JUMP EQUALS KeyCode Action
    (101) Dash -> . DASH EQUALS KeyCode
    (102) Dash -> . DASH EQUALS KeyCode Action
    (103) JetPack -> . JETPACK EQUALS KeyCode
    (104) JetPack -> . JETPACK EQUALS KeyCode Action

    JUMP            shift and go to state 35
    DASH            shift and go to state 36
    JETPACK         shift and go to state 37

    Action                         shift and go to state 38
    Jump                           shift and go to state 32
    Dash                           shift and go to state 33
    JetPack                        shift and go to state 34

state 26

    (8) GravityId -> Gravity EQUALS . Float

    Float           shift and go to state 39


state 27

    (9) Movement -> ID EQUALS Direction . ID EQUALS Direction ID EQUALS Direction

    ID              shift and go to state 40


state 28

    (10) Direction -> Horizontal .

    ID              reduce using rule 10 (Direction -> Horizontal .)
    $end            reduce using rule 10 (Direction -> Horizontal .)
    Force           reduce using rule 10 (Direction -> Horizontal .)
    Impulse         reduce using rule 10 (Direction -> Horizontal .)
    Acceleration    reduce using rule 10 (Direction -> Horizontal .)
    NONE            reduce using rule 10 (Direction -> Horizontal .)
    JUMP            reduce using rule 10 (Direction -> Horizontal .)
    DASH            reduce using rule 10 (Direction -> Horizontal .)
    JETPACK         reduce using rule 10 (Direction -> Horizontal .)


state 29

    (11) Direction -> NONE .

    ID              reduce using rule 11 (Direction -> NONE .)
    $end            reduce using rule 11 (Direction -> NONE .)
    Force           reduce using rule 11 (Direction -> NONE .)
    Impulse         reduce using rule 11 (Direction -> NONE .)
    Acceleration    reduce using rule 11 (Direction -> NONE .)
    NONE            reduce using rule 11 (Direction -> NONE .)
    JUMP            reduce using rule 11 (Direction -> NONE .)
    DASH            reduce using rule 11 (Direction -> NONE .)
    JETPACK         reduce using rule 11 (Direction -> NONE .)


state 30

    (12) Direction -> Vertical .

    ID              reduce using rule 12 (Direction -> Vertical .)
    $end            reduce using rule 12 (Direction -> Vertical .)
    Force           reduce using rule 12 (Direction -> Vertical .)
    Impulse         reduce using rule 12 (Direction -> Vertical .)
    Acceleration    reduce using rule 12 (Direction -> Vertical .)
    NONE            reduce using rule 12 (Direction -> Vertical .)
    JUMP            reduce using rule 12 (Direction -> Vertical .)
    DASH            reduce using rule 12 (Direction -> Vertical .)
    JETPACK         reduce using rule 12 (Direction -> Vertical .)


state 31

    (5) RigidBody -> RIGIDBODY SpeedId Movement ForceMode Action .

    $end            reduce using rule 5 (RigidBody -> RIGIDBODY SpeedId Movement ForceMode Action .)


state 32

    (17) Action -> Jump .

    $end            reduce using rule 17 (Action -> Jump .)


state 33

    (18) Action -> Dash .

    $end            reduce using rule 18 (Action -> Dash .)


state 34

    (19) Action -> JetPack .

    $end            reduce using rule 19 (Action -> JetPack .)


state 35

    (99) Jump -> JUMP . EQUALS KeyCode
    (100) Jump -> JUMP . EQUALS KeyCode Action

    EQUALS          shift and go to state 41


state 36

    (101) Dash -> DASH . EQUALS KeyCode
    (102) Dash -> DASH . EQUALS KeyCode Action

    EQUALS          shift and go to state 42


state 37

    (103) JetPack -> JETPACK . EQUALS KeyCode
    (104) JetPack -> JETPACK . EQUALS KeyCode Action

    EQUALS          shift and go to state 43


state 38

    (6) CharacterController -> CHARACTERCONTROLLER SpeedId GravityId Movement Action .

    $end            reduce using rule 6 (CharacterController -> CHARACTERCONTROLLER SpeedId GravityId Movement Action .)


state 39

    (8) GravityId -> Gravity EQUALS Float .

    ID              reduce using rule 8 (GravityId -> Gravity EQUALS Float .)


state 40

    (9) Movement -> ID EQUALS Direction ID . EQUALS Direction ID EQUALS Direction

    EQUALS          shift and go to state 44


state 41

    (99) Jump -> JUMP EQUALS . KeyCode
    (100) Jump -> JUMP EQUALS . KeyCode Action
    (20) KeyCode -> .
    (21) KeyCode -> . A
    (22) KeyCode -> . B
    (23) KeyCode -> . C
    (24) KeyCode -> . D
    (25) KeyCode -> . E
    (26) KeyCode -> . F
    (27) KeyCode -> . G
    (28) KeyCode -> . H
    (29) KeyCode -> . I
    (30) KeyCode -> . J
    (31) KeyCode -> . K
    (32) KeyCode -> . L
    (33) KeyCode -> . M
    (34) KeyCode -> . N
    (35) KeyCode -> . O
    (36) KeyCode -> . P
    (37) KeyCode -> . Q
    (38) KeyCode -> . R
    (39) KeyCode -> . S
    (40) KeyCode -> . T
    (41) KeyCode -> . U
    (42) KeyCode -> . V
    (43) KeyCode -> . W
    (44) KeyCode -> . X
    (45) KeyCode -> . Y
    (46) KeyCode -> . Z
    (47) KeyCode -> . Backspace
    (48) KeyCode -> . Tab
    (49) KeyCode -> . SysReq
    (50) KeyCode -> . Break
    (51) KeyCode -> . CapsLock
    (52) KeyCode -> . ScrollLock
    (53) KeyCode -> . RightShift
    (54) KeyCode -> . LeftShift
    (55) KeyCode -> . RightControl
    (56) KeyCode -> . LeftControl
    (57) KeyCode -> . RightAlt
    (58) KeyCode -> . LeftAlt
    (59) KeyCode -> . RightCommand
    (60) KeyCode -> . RightApple
    (61) KeyCode -> . LeftCommand
    (62) KeyCode -> . LeftWindows
    (63) KeyCode -> . RightWindows
    (64) KeyCode -> . AltGr
    (65) KeyCode -> . Help
    (66) KeyCode -> . Print
    (67) KeyCode -> . Clear
    (68) KeyCode -> . Return
    (69) KeyCode -> . Pause
    (70) KeyCode -> . Escape
    (71) KeyCode -> . Space
    (72) KeyCode -> . Exclaim
    (73) KeyCode -> . DoubleQuote
    (74) KeyCode -> . Hash
    (75) KeyCode -> . Dollar
    (76) KeyCode -> . Ampersand
    (77) KeyCode -> . Quote
    (78) KeyCode -> . LeftParen
    (79) KeyCode -> . RightParen
    (80) KeyCode -> . Asterisk
    (81) KeyCode -> . Plus
    (82) KeyCode -> . Comma
    (83) KeyCode -> . Minus
    (84) KeyCode -> . Period
    (85) KeyCode -> . Slash
    (86) KeyCode -> . Colon
    (87) KeyCode -> . Semicolon
    (88) KeyCode -> . Less
    (89) KeyCode -> . Equals
    (90) KeyCode -> . Greater
    (91) KeyCode -> . Question
    (92) KeyCode -> . At
    (93) KeyCode -> . LeftBracket
    (94) KeyCode -> . Backslash
    (95) KeyCode -> . RightBracket
    (96) KeyCode -> . Caret
    (97) KeyCode -> . Underscore
    (98) KeyCode -> . BackQuote

    JUMP            reduce using rule 20 (KeyCode -> .)
    DASH            reduce using rule 20 (KeyCode -> .)
    JETPACK         reduce using rule 20 (KeyCode -> .)
    $end            reduce using rule 20 (KeyCode -> .)
    A               shift and go to state 46
    B               shift and go to state 47
    C               shift and go to state 48
    D               shift and go to state 49
    E               shift and go to state 50
    F               shift and go to state 51
    G               shift and go to state 52
    H               shift and go to state 53
    I               shift and go to state 54
    J               shift and go to state 55
    K               shift and go to state 56
    L               shift and go to state 57
    M               shift and go to state 58
    N               shift and go to state 59
    O               shift and go to state 60
    P               shift and go to state 61
    Q               shift and go to state 62
    R               shift and go to state 63
    S               shift and go to state 64
    T               shift and go to state 65
    U               shift and go to state 66
    V               shift and go to state 67
    W               shift and go to state 68
    X               shift and go to state 69
    Y               shift and go to state 70
    Z               shift and go to state 71
    Backspace       shift and go to state 72
    Tab             shift and go to state 73
    SysReq          shift and go to state 74
    Break           shift and go to state 75
    CapsLock        shift and go to state 76
    ScrollLock      shift and go to state 77
    RightShift      shift and go to state 78
    LeftShift       shift and go to state 79
    RightControl    shift and go to state 80
    LeftControl     shift and go to state 81
    RightAlt        shift and go to state 82
    LeftAlt         shift and go to state 83
    RightCommand    shift and go to state 84
    RightApple      shift and go to state 85
    LeftCommand     shift and go to state 86
    LeftWindows     shift and go to state 87
    RightWindows    shift and go to state 88
    AltGr           shift and go to state 89
    Help            shift and go to state 90
    Print           shift and go to state 91
    Clear           shift and go to state 92
    Return          shift and go to state 93
    Pause           shift and go to state 94
    Escape          shift and go to state 95
    Space           shift and go to state 96
    Exclaim         shift and go to state 97
    DoubleQuote     shift and go to state 98
    Hash            shift and go to state 99
    Dollar          shift and go to state 100
    Ampersand       shift and go to state 101
    Quote           shift and go to state 102
    LeftParen       shift and go to state 103
    RightParen      shift and go to state 104
    Asterisk        shift and go to state 105
    Plus            shift and go to state 106
    Comma           shift and go to state 107
    Minus           shift and go to state 108
    Period          shift and go to state 109
    Slash           shift and go to state 110
    Colon           shift and go to state 111
    Semicolon       shift and go to state 112
    Less            shift and go to state 113
    Equals          shift and go to state 114
    Greater         shift and go to state 115
    Question        shift and go to state 116
    At              shift and go to state 117
    LeftBracket     shift and go to state 118
    Backslash       shift and go to state 119
    RightBracket    shift and go to state 120
    Caret           shift and go to state 121
    Underscore      shift and go to state 122
    BackQuote       shift and go to state 123

    KeyCode                        shift and go to state 45

state 42

    (101) Dash -> DASH EQUALS . KeyCode
    (102) Dash -> DASH EQUALS . KeyCode Action
    (20) KeyCode -> .
    (21) KeyCode -> . A
    (22) KeyCode -> . B
    (23) KeyCode -> . C
    (24) KeyCode -> . D
    (25) KeyCode -> . E
    (26) KeyCode -> . F
    (27) KeyCode -> . G
    (28) KeyCode -> . H
    (29) KeyCode -> . I
    (30) KeyCode -> . J
    (31) KeyCode -> . K
    (32) KeyCode -> . L
    (33) KeyCode -> . M
    (34) KeyCode -> . N
    (35) KeyCode -> . O
    (36) KeyCode -> . P
    (37) KeyCode -> . Q
    (38) KeyCode -> . R
    (39) KeyCode -> . S
    (40) KeyCode -> . T
    (41) KeyCode -> . U
    (42) KeyCode -> . V
    (43) KeyCode -> . W
    (44) KeyCode -> . X
    (45) KeyCode -> . Y
    (46) KeyCode -> . Z
    (47) KeyCode -> . Backspace
    (48) KeyCode -> . Tab
    (49) KeyCode -> . SysReq
    (50) KeyCode -> . Break
    (51) KeyCode -> . CapsLock
    (52) KeyCode -> . ScrollLock
    (53) KeyCode -> . RightShift
    (54) KeyCode -> . LeftShift
    (55) KeyCode -> . RightControl
    (56) KeyCode -> . LeftControl
    (57) KeyCode -> . RightAlt
    (58) KeyCode -> . LeftAlt
    (59) KeyCode -> . RightCommand
    (60) KeyCode -> . RightApple
    (61) KeyCode -> . LeftCommand
    (62) KeyCode -> . LeftWindows
    (63) KeyCode -> . RightWindows
    (64) KeyCode -> . AltGr
    (65) KeyCode -> . Help
    (66) KeyCode -> . Print
    (67) KeyCode -> . Clear
    (68) KeyCode -> . Return
    (69) KeyCode -> . Pause
    (70) KeyCode -> . Escape
    (71) KeyCode -> . Space
    (72) KeyCode -> . Exclaim
    (73) KeyCode -> . DoubleQuote
    (74) KeyCode -> . Hash
    (75) KeyCode -> . Dollar
    (76) KeyCode -> . Ampersand
    (77) KeyCode -> . Quote
    (78) KeyCode -> . LeftParen
    (79) KeyCode -> . RightParen
    (80) KeyCode -> . Asterisk
    (81) KeyCode -> . Plus
    (82) KeyCode -> . Comma
    (83) KeyCode -> . Minus
    (84) KeyCode -> . Period
    (85) KeyCode -> . Slash
    (86) KeyCode -> . Colon
    (87) KeyCode -> . Semicolon
    (88) KeyCode -> . Less
    (89) KeyCode -> . Equals
    (90) KeyCode -> . Greater
    (91) KeyCode -> . Question
    (92) KeyCode -> . At
    (93) KeyCode -> . LeftBracket
    (94) KeyCode -> . Backslash
    (95) KeyCode -> . RightBracket
    (96) KeyCode -> . Caret
    (97) KeyCode -> . Underscore
    (98) KeyCode -> . BackQuote
